--- a/Taco_shop/contact.html
+++ b/Taco_shop/contact.html
@@ -45,12 +45,12 @@
                         <legend>Send Us a Message</legend>
                         <div>
                             <label for="name">Name:</label>
-                        <input type="text" id="name" placeholder="your name">
+                        <input type="text" name="name" id="name" placeholder="your name">
                         </div>
                         <br>
                         <div>
                             <label for="email">Email:</label>
-                            <input type="email" id="email" placeholder="your email">
+                            <input type="email" name="email" id="email" placeholder="your email">
                         </div>
                         <br>
                         <div>
